# smokemon

./: .editorconfig  .gitattributes  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  INSTALL.txt  LICENSE  PLAN.md  QUICKSTART.md  README.md  README.txt  SECURITY.md  collector.py  collector_host.py  collector_probes.py  daily_graph.sh  hub_ingest.py  index.html  install.sh  iperf_probe.py  live.sh  mkdocs.yml  platform_adapters.py  plot.py  pyproject.toml  shipper.py  sitemap.xml  term_plot.py
.claude/: settings.json
.cursor/rules/: no-git-push-without-verification.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
INSTALL/: index.html
PLAN/: index.html
QUICKSTART/: index.html
SECURITY/: index.html
adr/0001-incident-pivot/: index.html
deploy/: install_linux.sh
deploy/launchd/: com.smokemon.collect-fast.plist  com.smokemon.collect-slow.plist  com.smokemon.daily.plist  com.smokemon.hub.plist  com.smokemon.iperf.plist  com.smokemon.prune.plist  com.smokemon.shipper.plist  com.stefan.smokemon-collect-fast.plist  com.stefan.smokemon-collect-slow.plist  com.stefan.smokemon-daily.plist  com.stefan.smokemon-hub.plist  com.stefan.smokemon-iperf.plist  com.stefan.smokemon-shipper.plist
deploy/systemd/: smokemon-collect-fast.service  smokemon-collect-slow.service  smokemon-hub.service  smokemon-iperf-server.service  smokemon-iperf.service  smokemon-iperf.timer  smokemon-prune.service  smokemon-prune.timer  smokemon-shipper.service  smokemon-shipper.timer  smokemon.service
detector-spec/: index.html
docs/: detector-spec.md  extra.css
docs/adr/: 0001-incident-pivot.md
docs/superpowers/plans/: 2026-05-31-hub-storage-scale.md  2026-05-31-ml-analysis.md
docs/superpowers/specs/: 2026-05-31-hub-storage-scale-design.md  2026-05-31-ml-analysis-design.md
launchd/: com.stefan.smokemon-host.plist  com.stefan.smokemon-shipper.plist
package/: index.html
probes/: index.html
scripts/: _demo_seed.py  bench_hub_reads.py  bench_write_budget.py  build-pyz.sh  docs.sh  fleet-reprovision.sh  install_linux.sh  update.sh
search/: search_index.json
smokemon/: README.md  __init__.py  __main__.py  alerts.py  analyze.py  baseline.py  cli.py  collect.py  config.py  core.py  detect.py  duckio.py  events.py  expedite.py  footprint.py  governor.py  heartbeat.py  hub.py  hubapi.py  incidents.py  mlanomaly.py  notify.py  prune.py  query.py  report.py  rollup.py  schema.py  ship.py  signals.py
smokemon/adapters/: __init__.py  darwin.py  linux.py
smokemon/probes/: README.md  __init__.py  dockerps.py  ext.py  host.py  http.py  inventory.py  iperf.py  logexcerpt.py  mtr.py  net.py  ping.py  pipeline.py  ports.py  redisq.py  synthetic.py  tcpcheck.py  wifi.py
smokemon/render/: __init__.py  png.py  tui.py
smokemon/static/: dashboard.html
systemd/: smokemon-collector.service  smokemon-host.service  smokemon-hub-ingest.service  smokemon-iperf.service  smokemon-iperf.timer  smokemon-probes.service  smokemon-shipper.service  smokemon-shipper.timer
tests/: conftest.py  test_adapters.py  test_alerts.py  test_analyze.py  test_cli_incidents.py  test_detect.py  test_docker.py  test_docs_rules.py  test_duckio.py  test_events.py  test_ext.py  test_features.py  test_fleet.py  test_footprint.py  test_governor.py  test_host_mounts.py  test_hub.py  test_hub_cache.py  test_hub_cli.py  test_hub_disconnect.py  test_hub_perf.py  test_hub_readonly.py  test_hubapi.py  test_imports.py  test_incidents.py  test_inventory.py  test_jitter.py  test_logexcerpt.py  test_logs.py  test_mlanomaly.py  test_network.py  test_notify.py  test_ping.py  test_pipeline.py  test_pivot_e2e.py  test_prune.py  test_query.py  test_redis_gpu.py  test_report.py  test_rollup.py  (+10 more)
